examples/valid/power.mini
pow(2,1)
pow(2,2)
pow(2,3)
pow(pow(2,2),2)
