examples/invalid/unknown_identifier.mini
# Ошибка: неизвестный идентификатор foo
foo(2,3)
